test/fixtures/bpmn/error/xmlns-redeclaration.bpmn
<?xml version="1.0" encoding="UTF-8"?>
<definitions xmlns="http://www.omg.org/spec/BPMN/20100524/MODEL" xmlns="http://www.omg.org/spec/BPMN/20100524/DI" id="a10" id="a30" xmlns:bizagi="http://www.bizagi.com/bpmn20" targetNamespace="http://www.bizagi.com/definitions/_XXO" />